kub-config/deploy_conv-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      module: backend
  template:
    metadata:
      name: conv-api
      labels:
        module: backend
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: conv-api-volume
              mountPath: /opt/app/uploads
      volumes:
        - name: conv-api-volume
          persistentVolumeClaim:
            claimName: conv-api-storage
