kub-config/deployment_rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      module: rabbitmq
  template:
    metadata:
      name: rabbit
      labels:
        module: rabbitmq
    spec:
      containers:
        - name: rabbit-container
          imagePullPolicy: IfNotPresent
          image: rabbitmq:4.2
          ports:
            - containerPort: 5672
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-volume
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
