kub-config/cluster-ip_conv-api.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    module: backend
