kub-config/cluster-ip_conv-app.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    module: frontend
