kub-config/cluster-ip_rabbtimq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cluster-ip
spec:
  type: ClusterIP
  ports:
    - port: 5672
      protocol: TCP
  selector:
    module: rabbitmq
